# VXCC

./: BUILDING.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yaml
app/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  main.cpp
include/AST/: AST.hpp  Attribute.hpp  Forward.hpp  TopLevelDeclaration.hpp  TranslationUnit.hpp
include/AST/Declarations/: DeclSpecifier.hpp  Declaration.hpp  Forward.hpp  FunctionBody.hpp  FunctionDefinition.hpp  Initializer.hpp  TypeId.hpp  TypeQualifier.hpp
include/AST/Declarations/BlockDeclarations/: BlockDeclaration.hpp  Forward.hpp  SimpleDeclaration.hpp
include/AST/Declarations/Declarators/: ArrayDeclarator.hpp  Declarator.hpp  DeclaratorId.hpp  Forward.hpp  FunctionDeclarator.hpp  InitDeclarator.hpp  NoptrDeclarator.hpp  NoptrDeclaratorTrailingReturnType.hpp  PtrDeclarator.hpp
include/AST/Expressions/: BinaryExpression.hpp  Expression.hpp  Forward.hpp  PostfixExpression.hpp  PrimaryExpression.hpp  UnaryExpression.hpp
include/AST/Statements/: CompoundStatement.hpp  DeclarationStatement.hpp  ExpressionStatement.hpp  Forward.hpp  IterationStatement.hpp  JumpStatement.hpp  LabeledStatement.hpp  SelectionStatement.hpp  Statement.hpp
include/Common/: Assert.hpp  Macros.hpp
include/Lexer/: CLexer.hpp  CToken.hpp  Lexer.hpp  Token.hpp  TokenStream.hpp
include/Parser/: CParser.hpp  Parser.hpp
src/: CMakeLists.txt
src/AST/: AST.cpp  TranslationUnit.cpp
src/AST/Declarations/: DeclSpecifier.cpp  Declaration.cpp  FunctionBody.cpp  FunctionDefinition.cpp  Initializer.cpp
src/AST/Declarations/BlockDeclarations/: BlockDeclaration.cpp  SimpleDeclaration.cpp
src/AST/Declarations/Declarators/: DeclaratorId.cpp  FunctionDeclarator.cpp  InitDeclarator.cpp  PtrDeclarator.cpp
src/AST/Expressions/: BinaryExpression.cpp  Expression.cpp  PostfixExpression.cpp  PrimaryExpression.cpp  UnaryExpression.cpp
src/AST/Statements/: CompoundStatement.cpp  DeclarationStatement.cpp  JumpStatement.cpp  SelectionStatement.cpp
src/Lexer/: CLexer.cpp  CToken.cpp  TokenStream.cpp
src/Parser/: CParser.cpp  Parser.cpp
test/: CLexerTest.cpp  CMakeLists.txt  CParserTest.cpp
test_code/C/: test2.c  test3.c
